overflow fixed

--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
     padding: 0;
     font-family: 'century', sans-serif;
 }
-body {overflow-x: hidden;}
 /*===================HEADER=================*/
 header {
     height: 100vh;
